# syntek-base

./: .dockerignore  .editorconfig  .gitignore  .markdownlint-cli2.jsonc  .mcp.json  .npmrc  .prettierignore  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  DESIGN.md  GAPS.md  README.md  RELEASES.md  VERSION-HISTORY.md  eslint.config.mjs  install.sh  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.claude/: CLAUDE.md  CLAUDE.md.pre-scaffold  settings.json
.claude/commands/: codegen.md  dev.md  migrate.md  production.md  schema.md  staging.md  test.md
.claude/hooks/: pr-comment.sh  pr-gate.sh
.claude/hooks/lib/: check-cloc.sh  check-format.sh  check-lint.sh  check-lockfiles.sh  check-security.sh  check-stubs.sh  check-tests.sh  check-typecheck.sh
.github/workflows/: audit-cloc.yml  audit-stubs.yml  syntax-js-ts.yml  syntax-markdown.yml  syntax-python.yml  test-api.yml  test-backend.yml  test-e2e.yml  test-frontend.yml  test-mobile.yml
code/: CONTEXT.md
code/docs/: ACCESSIBILITY.md  API-DESIGN.md  ARCHITECTURE-PATTERNS.md  CODING-PRINCIPLES.md  CONTEXT.md  DATA-STRUCTURES.md  ENCRYPTION-GUIDE.md  LOGGING.md  PERFORMANCE.md  RESPONSIVE-DESIGN.md  RLS-GUIDE.md  SECURITY.md  TESTING.md  URL-STRATEGY.md
code/src/: CONTEXT.md
code/src/backend/: CONTEXT.md
code/src/docker/: .env.dev.example  .env.prod.example  .env.staging.example  .env.test.example  CONTEXT.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.test.yml
code/src/frontend/: CONTEXT.md  codegen.ts  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
code/src/logs/: CONTEXT.md
code/src/mobile/: CONTEXT.md  app.json  codegen.ts  jest.config.js  package.json  storybook.requires.ts  tailwind.config.ts  tsconfig.json
code/src/scripts/: CONTEXT.md
code/src/shared/: CONTEXT.md  package.json  tsconfig.json
code/src/tests/: CONTEXT.md
code/workflows/: CONTEXT.md
code/workflows/01-new-feature/: CHECKLIST.md  CONTEXT.md  STEPS.md
code/workflows/02-tdd-cycle/: CHECKLIST.md  CONTEXT.md  STEPS.md
code/workflows/03-security-hardening/: CHECKLIST.md  CONTEXT.md  STEPS.md
code/workflows/04-api-design/: CHECKLIST.md  CONTEXT.md  STEPS.md
code/workflows/05-gdpr-enforcement/: CHECKLIST.md  CONTEXT.md  STEPS.md
code/workflows/06-review/: CHECKLIST.md  CONTEXT.md  STEPS.md
code/workflows/07-debug/: CHECKLIST.md  CONTEXT.md  STEPS.md
code/workflows/08-refactor/: CHECKLIST.md  CONTEXT.md  STEPS.md
code/workflows/09-database-migration/: CHECKLIST.md  CONTEXT.md  STEPS.md
code/workflows/10-debugging-with-logs/: CHECKLIST.md  CONTEXT.md  STEPS.md
how-to/: CONTEXT.md
how-to/docs/: API-TESTING.md  CLI-TOOLING.md  CONTEXT.md  DEVELOPMENT.md  SYNTEK-GUIDE.md
how-to/src/: API-TESTING.md  BRANCH-GUIDE.md  CLAUDE-MULTILAYER.md  CODE-REVIEW.md  COMMIT-GUIDE.md  CONTEXT.md  CUSTOMISING-TEMPLATE.md  ENV-SETUP.md  GETTING-STARTED.md  ISSUE-REPORTING.md  PR-GUIDE.md
how-to/workflows/: CONTEXT.md
how-to/workflows/01-first-time-setup/: CHECKLIST.md  CONTEXT.md  STEPS.md
how-to/workflows/02-daily-development/: CHECKLIST.md  CONTEXT.md  STEPS.md
how-to/workflows/03-debugging/: CHECKLIST.md  CONTEXT.md  STEPS.md
project-management/: CONTEXT.md
project-management/docs/: CONTEXT.md  GDPR-GUIDE.md  GIT-GUIDE.md  QA-GUIDE.md  RESPONSIVE-DESIGN.md  SECURITY-GUIDE.md  SEO-CHECKLIST.md  SPRINT-PLANNING-GUIDE.md  VERSIONING-GUIDE.md
project-management/src/: CONTEXT.md
project-management/src/00-ASSETS/: CONTEXT.md
project-management/src/00-DECISIONS/: CONTEXT.md
project-management/src/00-PLANS/: CONTEXT.md
project-management/src/01-STORIES/: CONTEXT.md  US000-TEMPLATE.md
project-management/src/02-SPRINTS/: CONTEXT.md  SPRINT-00-TEMPLATE.md
project-management/src/03-DATABASE/: CONTEXT.md
project-management/src/04-USER-FLOW/: CONTEXT.md
project-management/src/05-BRAND-GUIDE/: CONTEXT.md
project-management/src/06-COMPONENTS/: CONTEXT.md
project-management/src/07-WIREFRAMES/: CONTEXT.md
project-management/workflows/: CONTEXT.md
(+288 files in other folders)
