[project]
name = "syntek-website"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = []

[tool.uv]
package = false

[dependency-groups]
dev = [
  "ruff>=0.11.0",
  "basedpyright>=1.28.0",
]

[tool.ruff]
src = ["code/src/backend"]
target-version = "py314"
line-length = 100
exclude = [".claude", ".venv"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "DJ",  # flake8-django
    "S",   # flake8-bandit (security)
    "N",   # pep8-naming
]
ignore = [
    "S101",  # assert statements (used in tests)
    "S105",  # hardcoded passwords (false positives in settings)
]

[tool.ruff.lint.per-file-ignores]
"*/migrations/*" = ["E501", "N806"]
"*/settings/*"   = ["S105", "F405", "F403"]
"*/tests/*"      = ["S101", "S106"]

[tool.ruff.lint.isort]
sections = { "django" = ["django"] }
known-third-party = ["strawberry", "graphene"]
section-order = ["future", "standard-library", "django", "third-party", "first-party", "local-folder"]

[tool.basedpyright]
pythonVersion = "3.14"
venvPath = "."
venv = ".venv"
include = ["code/src/backend"]
exclude = ["**/migrations", "**/__pycache__"]
typeCheckingMode = "standard"
reportMissingImports = true
reportMissingTypeStubs = false

[tool.pytest.ini_options]
pythonpath = ["code/src/backend"]
testpaths = ["code/src/backend"]
addopts = "-x -q"
DJANGO_SETTINGS_MODULE = "config.settings.local"
