[project]
name = "project-name"
version = "1.1.2"
requires-python = ">=3.14"
dependencies = [
  "django>=6.0.4",
  "strawberry-graphql[django]>=0.314.3",
  "gunicorn",
  "uvicorn[standard]",
  "dj-database-url",
  "psycopg[binary]",
  "django-cors-headers",
  "django-cloudinary-storage",
  "cloudinary",
  "sentry-sdk[django]",
  "argon2-cffi",
  "cryptography",
]

[tool.uv]
package = false

[tool.ruff]
src = ["code/src/backend"]
target-version = "py314"
line-length = 100
exclude = [".claude", ".venv"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "DJ",  # flake8-django
    "S",   # flake8-bandit (security)
    "N",   # pep8-naming
]
ignore = [
    "S101",  # assert statements (used in tests)
    "S105",  # hardcoded passwords (false positives in settings)
]

[tool.ruff.lint.per-file-ignores]
"*/migrations/*" = ["E501", "N806"]
"*/settings/*"   = ["S105", "F405", "F403"]
"*/tests/*"      = ["S101", "S106"]

[tool.ruff.lint.isort]
sections = { "django" = ["django"] }
known-third-party = ["strawberry", "graphene"]
section-order = ["future", "standard-library", "django", "third-party", "first-party", "local-folder"]

[tool.basedpyright]
pythonVersion = "3.14"
venvPath = "."
venv = ".venv"
include = ["code/src/backend"]
exclude = ["**/migrations", "**/__pycache__"]
typeCheckingMode = "standard"
reportMissingImports = true
reportMissingTypeStubs = false

[dependency-groups]
dev = [
  "ruff>=0.11.0",
  "basedpyright>=1.28.0",
]
test = [
  "pytest>=8.0",
  "pytest-django>=4.9",
  "pytest-asyncio>=0.25",
  "pytest-cov>=6.0",
  "factory-boy>=3.3",
  "hypothesis>=6.0",
  "mutmut>=3.0",
]

[tool.pytest.ini_options]
pythonpath = ["code/src/backend"]
testpaths = ["code/src/backend"]
addopts = "-x -q --strict-markers"
DJANGO_SETTINGS_MODULE = "config.settings.test"
markers = [
  "unit: pure unit tests with no DB access",
  "integration: tests that require a real database",
  "e2e: end-to-end browser tests — never run automatically",
]

[tool.coverage.run]
source = ["apps"]
branch = true

[tool.coverage.report]
fail_under = 75
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "\\.\\.\\.",
]
omit = [
  "*/migrations/*",
  "*/tests/*",
  "*/__init__.py",
]
